SpellBook tooltip matrix layer fix